@@ -79,6 +79,7 @@ Bug fixes
  * Added file handling to support custom user add/edit forms with images/files (Eraldo Energy)
  * Placeholder text in modeladmin search now uses the correct template variable (Adriaan Tijsseling)
  * Fixed bad SQL syntax for updating URL paths on Microsoft SQL Server (Jesse Legg)
+ * Added workaround for Django 1.10 bug https://code.djangoproject.com/ticket/27037 causing forms with file upload fields to fail validation (Matt Westcott)
 
 
 Upgrade considerations
